[package]
name = "input-emulation"
description = "cross-platform input emulation library used by lan-mouse"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/feschber/lan-mouse"

[dependencies]
async-trait = "0.1.80"
futures = "0.3.28"
log = "0.4.22"
input-event = { path = "../input-event", version = "0.3.0" }
thiserror = "2.0.0"
tokio = { version = "1.32.0", features = [
    "io-util",
    "io-std",
    "macros",
    "net",
    "process",
    "rt",
    "sync",
    "signal",
] }
once_cell = "1.19.0"

[target.'cfg(all(unix, not(target_os="macos")))'.dependencies]
wayland-client = { version = "0.31.1", optional = true }
wayland-protocols = { version = "0.32.1", features = [
    "client",
    "staging",
    "unstable",
], optional = true }
wayland-protocols-wlr = { version = "0.3.1", features = [
    "client",
], optional = true }
wayland-protocols-misc = { version = "0.3.1", features = [
    "client",
], optional = true }
x11 = { version = "2.21.0", features = ["xlib", "xtest"], optional = true }
ashpd = { version = "0.10", default-features = false, features = [
    "tokio",
], optional = true }
reis = { version = "0.4", features = ["tokio"], optional = true }

[target.'cfg(target_os="macos")'.dependencies]
bitflags = "2.6.0"
core-graphics = { version = "0.24.0", features = ["highsierra"] }
keycode = "0.4.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["wlroots", "x11", "remote_desktop_portal", "libei"]
wlroots = [
    "dep:wayland-client",
    "dep:wayland-protocols",
    "dep:wayland-protocols-wlr",
    "dep:wayland-protocols-misc",
]
x11 = ["dep:x11"]
remote_desktop_portal = ["dep:ashpd"]
libei = ["dep:reis", "dep:ashpd"]
