[package]
name = "lan-mouse-proto"
description = "network protocol for lan-mouse"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/feschber/lan-mouse"

[dependencies]
num_enum = "0.7.2"
thiserror = "1.0.61"
input-event = { path = "../input-event", version = "0.2.1" }
paste = "1.0"
